syntax="proto3";
package com.axgrid.rpc;

option java_package = "com.axgrid.rpc";
option java_multiple_files = true;


message Request {
    int64 correlationId = 1;
    string trx = 2;
    OpPing        op_ping = 10;
    OpHelloWorld  op_hello_world = 11;
    OpCounter     op_counter = 12;
    OpServerTime  op_server_time = 13;
}


message Response {
    int64 correlationId = 1;
    string trx = 2;
    bool success = 3;

    string errorText = 4;
    int32 errorCode = 5;

    RpPing        rp_ping = 10;
    RpHelloWorld  rp_hello_world = 11;
    RpCounter     rp_counter = 12;
    RpServerTime  rp_server_time = 13;
}


message OpPing {
    uint64 time = 1;
}

message RpPing {
    uint64 time = 1;
}

message OpHelloWorld {
    string name = 1;
}

message RpHelloWorld {
    string result = 1;
}


message OpCounter {
    int32 increment = 1;
}

message RpCounter {
    int32 value = 1;
}


message OpServerTime {
}

message RpServerTime {
    int64 time = 1;
}
